--- a/NAMESPACE
+++ b/NAMESPACE
@@ -99,6 +99,7 @@ S3method(makeRLearner,regr.blackboost)
 S3method(makeRLearner,regr.cforest)
 S3method(makeRLearner,regr.crs)
 S3method(makeRLearner,regr.ctree)
+S3method(makeRLearner,regr.cubist)
 S3method(makeRLearner,regr.earth)
 S3method(makeRLearner,regr.elmNN)
 S3method(makeRLearner,regr.fnn)
@@ -214,6 +215,7 @@ S3method(predictLearner,regr.bartMachine)
 S3method(predictLearner,regr.cforest)
 S3method(predictLearner,regr.crs)
 S3method(predictLearner,regr.ctree)
+S3method(predictLearner,regr.cubist)
 S3method(predictLearner,regr.earth)
 S3method(predictLearner,regr.elmNN)
 S3method(predictLearner,regr.fnn)
@@ -371,6 +373,7 @@ S3method(trainLearner,regr.bartMachine)
 S3method(trainLearner,regr.cforest)
 S3method(trainLearner,regr.crs)
 S3method(trainLearner,regr.ctree)
+S3method(trainLearner,regr.cubist)
 S3method(trainLearner,regr.earth)
 S3method(trainLearner,regr.elmNN)
 S3method(trainLearner,regr.fnn)
@@ -520,6 +523,7 @@ export(makeMulticlassWrapper)
 export(makeOverBaggingWrapper)
 export(makeOversampleWrapper)
 export(makePreprocWrapper)
+export(makePreprocWrapperCaret)
 export(makeRLearner)
 export(makeRLearnerClassif)
 export(makeRLearnerCluster)
