--- a/NAMESPACE
+++ b/NAMESPACE
@@ -99,6 +99,7 @@ S3method(makeRLearner,cluster.kmeans)
 S3method(makeRLearner,regr.IBk)
 S3method(makeRLearner,regr.bartMachine)
 S3method(makeRLearner,regr.blackboost)
+S3method(makeRLearner,regr.brnn)
 S3method(makeRLearner,regr.cforest)
 S3method(makeRLearner,regr.crs)
 S3method(makeRLearner,regr.ctree)
@@ -221,6 +222,7 @@ S3method(predictLearner,cluster.cmeans)
 S3method(predictLearner,cluster.kmeans)
 S3method(predictLearner,regr.IBk)
 S3method(predictLearner,regr.bartMachine)
+S3method(predictLearner,regr.brnn)
 S3method(predictLearner,regr.cforest)
 S3method(predictLearner,regr.crs)
 S3method(predictLearner,regr.ctree)
@@ -385,6 +387,7 @@ S3method(trainLearner,cluster.cmeans)
 S3method(trainLearner,cluster.kmeans)
 S3method(trainLearner,regr.IBk)
 S3method(trainLearner,regr.bartMachine)
+S3method(trainLearner,regr.brnn)
 S3method(trainLearner,regr.cforest)
 S3method(trainLearner,regr.crs)
 S3method(trainLearner,regr.ctree)
