Add learners from package kohonen

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -51,6 +51,7 @@ S3method(makeRLearner,classif.OneR)
 S3method(makeRLearner,classif.PART)
 S3method(makeRLearner,classif.ada)
 S3method(makeRLearner,classif.bartMachine)
+S3method(makeRLearner,classif.bdk)
 S3method(makeRLearner,classif.blackboost)
 S3method(makeRLearner,classif.boosting)
 S3method(makeRLearner,classif.cforest)
@@ -89,6 +90,7 @@ S3method(makeRLearner,classif.rrlda)
 S3method(makeRLearner,classif.sda)
 S3method(makeRLearner,classif.svm)
 S3method(makeRLearner,classif.xgboost)
+S3method(makeRLearner,classif.xyf)
 S3method(makeRLearner,cluster.DBScan)
 S3method(makeRLearner,cluster.EM)
 S3method(makeRLearner,cluster.FarthestFirst)
@@ -98,6 +100,7 @@ S3method(makeRLearner,cluster.cmeans)
 S3method(makeRLearner,cluster.kmeans)
 S3method(makeRLearner,regr.IBk)
 S3method(makeRLearner,regr.bartMachine)
+S3method(makeRLearner,regr.bdk)
 S3method(makeRLearner,regr.blackboost)
 S3method(makeRLearner,regr.brnn)
 S3method(makeRLearner,regr.cforest)
@@ -130,6 +133,7 @@ S3method(makeRLearner,regr.rsm)
 S3method(makeRLearner,regr.rvm)
 S3method(makeRLearner,regr.svm)
 S3method(makeRLearner,regr.xgboost)
+S3method(makeRLearner,regr.xyf)
 S3method(makeRLearner,surv.CoxBoost)
 S3method(makeRLearner,surv.cforest)
 S3method(makeRLearner,surv.coxph)
@@ -175,6 +179,7 @@ S3method(predictLearner,classif.OneR)
 S3method(predictLearner,classif.PART)
 S3method(predictLearner,classif.ada)
 S3method(predictLearner,classif.bartMachine)
+S3method(predictLearner,classif.bdk)
 S3method(predictLearner,classif.blackboost)
 S3method(predictLearner,classif.boosting)
 S3method(predictLearner,classif.cforest)
@@ -213,6 +218,7 @@ S3method(predictLearner,classif.rrlda)
 S3method(predictLearner,classif.sda)
 S3method(predictLearner,classif.svm)
 S3method(predictLearner,classif.xgboost)
+S3method(predictLearner,classif.xyf)
 S3method(predictLearner,cluster.DBScan)
 S3method(predictLearner,cluster.EM)
 S3method(predictLearner,cluster.FarthestFirst)
@@ -222,6 +228,7 @@ S3method(predictLearner,cluster.cmeans)
 S3method(predictLearner,cluster.kmeans)
 S3method(predictLearner,regr.IBk)
 S3method(predictLearner,regr.bartMachine)
+S3method(predictLearner,regr.bdk)
 S3method(predictLearner,regr.brnn)
 S3method(predictLearner,regr.cforest)
 S3method(predictLearner,regr.crs)
@@ -253,6 +260,7 @@ S3method(predictLearner,regr.rsm)
 S3method(predictLearner,regr.rvm)
 S3method(predictLearner,regr.svm)
 S3method(predictLearner,regr.xgboost)
+S3method(predictLearner,regr.xyf)
 S3method(predictLearner,surv.CoxBoost)
 S3method(predictLearner,surv.cforest)
 S3method(predictLearner,surv.coxph)
@@ -340,6 +348,7 @@ S3method(trainLearner,classif.OneR)
 S3method(trainLearner,classif.PART)
 S3method(trainLearner,classif.ada)
 S3method(trainLearner,classif.bartMachine)
+S3method(trainLearner,classif.bdk)
 S3method(trainLearner,classif.blackboost)
 S3method(trainLearner,classif.boosting)
 S3method(trainLearner,classif.cforest)
@@ -378,6 +387,7 @@ S3method(trainLearner,classif.rrlda)
 S3method(trainLearner,classif.sda)
 S3method(trainLearner,classif.svm)
 S3method(trainLearner,classif.xgboost)
+S3method(trainLearner,classif.xyf)
 S3method(trainLearner,cluster.DBScan)
 S3method(trainLearner,cluster.EM)
 S3method(trainLearner,cluster.FarthestFirst)
@@ -387,6 +397,7 @@ S3method(trainLearner,cluster.cmeans)
 S3method(trainLearner,cluster.kmeans)
 S3method(trainLearner,regr.IBk)
 S3method(trainLearner,regr.bartMachine)
+S3method(trainLearner,regr.bdk)
 S3method(trainLearner,regr.brnn)
 S3method(trainLearner,regr.cforest)
 S3method(trainLearner,regr.crs)
@@ -418,6 +429,7 @@ S3method(trainLearner,regr.rsm)
 S3method(trainLearner,regr.rvm)
 S3method(trainLearner,regr.svm)
 S3method(trainLearner,regr.xgboost)
+S3method(trainLearner,regr.xyf)
 S3method(trainLearner,surv.CoxBoost)
 S3method(trainLearner,surv.cforest)
 S3method(trainLearner,surv.coxph)
