--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,7 @@ notifications:
         - travis.mlr@jakob-r.de
         - lars.kotthoff@insight-centre.org
         - schiffner@math.uni-duesseldorf.de
+        - erich.studerus@gmail.com
     on_success: change
     on_failure: always
 after_failure:
