regr.brnn: reactivate from todo-files

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -102,6 +102,7 @@ S3method(makeRLearner,regr.IBk)
 S3method(makeRLearner,regr.bartMachine)
 S3method(makeRLearner,regr.bdk)
 S3method(makeRLearner,regr.blackboost)
+S3method(makeRLearner,regr.brnn)
 S3method(makeRLearner,regr.cforest)
 S3method(makeRLearner,regr.crs)
 S3method(makeRLearner,regr.ctree)
@@ -228,6 +229,7 @@ S3method(predictLearner,cluster.kmeans)
 S3method(predictLearner,regr.IBk)
 S3method(predictLearner,regr.bartMachine)
 S3method(predictLearner,regr.bdk)
+S3method(predictLearner,regr.brnn)
 S3method(predictLearner,regr.cforest)
 S3method(predictLearner,regr.crs)
 S3method(predictLearner,regr.ctree)
@@ -396,6 +398,7 @@ S3method(trainLearner,cluster.kmeans)
 S3method(trainLearner,regr.IBk)
 S3method(trainLearner,regr.bartMachine)
 S3method(trainLearner,regr.bdk)
+S3method(trainLearner,regr.brnn)
 S3method(trainLearner,regr.cforest)
 S3method(trainLearner,regr.crs)
 S3method(trainLearner,regr.ctree)
