--- a/NAMESPACE
+++ b/NAMESPACE
@@ -52,6 +52,7 @@ S3method(makeRLearner,classif.PART)
 S3method(makeRLearner,classif.ada)
 S3method(makeRLearner,classif.bartMachine)
 S3method(makeRLearner,classif.bdk)
+S3method(makeRLearner,classif.binomial)
 S3method(makeRLearner,classif.blackboost)
 S3method(makeRLearner,classif.boosting)
 S3method(makeRLearner,classif.cforest)
@@ -79,6 +80,7 @@ S3method(makeRLearner,classif.nodeHarvest)
 S3method(makeRLearner,classif.plr)
 S3method(makeRLearner,classif.plsDA)
 S3method(makeRLearner,classif.plsdaCaret)
+S3method(makeRLearner,classif.probit)
 S3method(makeRLearner,classif.qda)
 S3method(makeRLearner,classif.quaDA)
 S3method(makeRLearner,classif.randomForest)
@@ -180,6 +182,7 @@ S3method(predictLearner,classif.PART)
 S3method(predictLearner,classif.ada)
 S3method(predictLearner,classif.bartMachine)
 S3method(predictLearner,classif.bdk)
+S3method(predictLearner,classif.binomial)
 S3method(predictLearner,classif.blackboost)
 S3method(predictLearner,classif.boosting)
 S3method(predictLearner,classif.cforest)
@@ -207,6 +210,7 @@ S3method(predictLearner,classif.nodeHarvest)
 S3method(predictLearner,classif.plr)
 S3method(predictLearner,classif.plsDA)
 S3method(predictLearner,classif.plsdaCaret)
+S3method(predictLearner,classif.probit)
 S3method(predictLearner,classif.qda)
 S3method(predictLearner,classif.quaDA)
 S3method(predictLearner,classif.randomForest)
@@ -349,6 +353,7 @@ S3method(trainLearner,classif.PART)
 S3method(trainLearner,classif.ada)
 S3method(trainLearner,classif.bartMachine)
 S3method(trainLearner,classif.bdk)
+S3method(trainLearner,classif.binomial)
 S3method(trainLearner,classif.blackboost)
 S3method(trainLearner,classif.boosting)
 S3method(trainLearner,classif.cforest)
@@ -376,6 +381,7 @@ S3method(trainLearner,classif.nodeHarvest)
 S3method(trainLearner,classif.plr)
 S3method(trainLearner,classif.plsDA)
 S3method(trainLearner,classif.plsdaCaret)
+S3method(trainLearner,classif.probit)
 S3method(trainLearner,classif.qda)
 S3method(trainLearner,classif.quaDA)
 S3method(trainLearner,classif.randomForest)
