depend on ggplot2 and import reshape2

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -479,6 +479,7 @@ export(fn)
 export(fnr)
 export(fp)
 export(fpr)
+export(generateLearningCurve)
 export(getBMRAggrPerformances)
 export(getBMRFeatSelResults)
 export(getBMRFilteredFeatures)
@@ -626,6 +627,7 @@ export(oversample)
 export(performance)
 export(plotFilterValues)
 export(plotLearnerPrediction)
+export(plotLearningCurve)
 export(plotROCRCurves)
 export(plotThreshVsPerf)
 export(plotTuneMultiCritResult)
@@ -692,6 +694,7 @@ import(checkmate)
 import(ggplot2)
 import(parallelMap)
 import(plyr)
+import(reshape2)
 importFrom(stats,predict)
 importFrom(survival,Surv)
 importFrom(survival,is.Surv)
