load glmnet before building because of namespace conflicts

--- a/tutorial/build
+++ b/tutorial/build
@@ -56,6 +56,7 @@ knitIt = function(f) {
 message("Loading required packages ...")
 suppressPackageStartupMessages({
   # namespace conflicts
+  library(glmnet)   # auc
   library(ROCR)
 
   # required to build
