--- a/NAMESPACE
+++ b/NAMESPACE
@@ -77,7 +77,6 @@ S3method(makeRLearner,classif.multinom)
 S3method(makeRLearner,classif.naiveBayes)
 S3method(makeRLearner,classif.nnet)
 S3method(makeRLearner,classif.plr)
-S3method(makeRLearner,classif.plsDA)
 S3method(makeRLearner,classif.plsdaCaret)
 S3method(makeRLearner,classif.probit)
 S3method(makeRLearner,classif.qda)
@@ -205,7 +204,6 @@ S3method(predictLearner,classif.multinom)
 S3method(predictLearner,classif.naiveBayes)
 S3method(predictLearner,classif.nnet)
 S3method(predictLearner,classif.plr)
-S3method(predictLearner,classif.plsDA)
 S3method(predictLearner,classif.plsdaCaret)
 S3method(predictLearner,classif.probit)
 S3method(predictLearner,classif.qda)
@@ -271,39 +269,6 @@ S3method(predictLearner,surv.optimCoxBoostPenalty)
 S3method(predictLearner,surv.penalized)
 S3method(predictLearner,surv.randomForestSRC)
 S3method(predictLearner,surv.rpart)
-S3method(print,Aggregation)
-S3method(print,BaggingModel)
-S3method(print,BaseWrapper)
-S3method(print,BaseWrapperModel)
-S3method(print,BenchmarkResult)
-S3method(print,ClassifTask)
-S3method(print,ClusterTask)
-S3method(print,CostSensTask)
-S3method(print,FailureModel)
-S3method(print,FeatSelControl)
-S3method(print,FeatSelResult)
-S3method(print,Filter)
-S3method(print,FilterValues)
-S3method(print,HoldoutDesc)
-S3method(print,ImputationDesc)
-S3method(print,Learner)
-S3method(print,Measure)
-S3method(print,OptModel)
-S3method(print,Prediction)
-S3method(print,RepCVDesc)
-S3method(print,ResampleDesc)
-S3method(print,ResampleInstance)
-S3method(print,ResamplePrediction)
-S3method(print,ResampleResult)
-S3method(print,SubsampleDesc)
-S3method(print,SupervisedTask)
-S3method(print,Task)
-S3method(print,TuneControl)
-S3method(print,TuneMultiCritControl)
-S3method(print,TuneMultiCritResult)
-S3method(print,TuneResult)
-S3method(print,UnsupervisedTask)
-S3method(print,WrappedModel)
 S3method(reimpute,data.frame)
 S3method(reimpute,list)
 S3method(removeHyperPars,BaseEnsemble)
@@ -374,7 +339,6 @@ S3method(trainLearner,classif.multinom)
 S3method(trainLearner,classif.naiveBayes)
 S3method(trainLearner,classif.nnet)
 S3method(trainLearner,classif.plr)
-S3method(trainLearner,classif.plsDA)
 S3method(trainLearner,classif.plsdaCaret)
 S3method(trainLearner,classif.probit)
 S3method(trainLearner,classif.qda)
@@ -628,6 +592,39 @@ export(plotTuneMultiCritResult)
 export(plotViperCharts)
 export(ppv)
 export(predictLearner)
+export(print.Aggregation)
+export(print.BaggingModel)
+export(print.BaseWrapper)
+export(print.BaseWrapperModel)
+export(print.BenchmarkResult)
+export(print.ClassifTask)
+export(print.ClusterTask)
+export(print.CostSensTask)
+export(print.FailureModel)
+export(print.FeatSelControl)
+export(print.FeatSelResult)
+export(print.Filter)
+export(print.FilterValues)
+export(print.HoldoutDesc)
+export(print.ImputationDesc)
+export(print.Learner)
+export(print.Measure)
+export(print.OptModel)
+export(print.Prediction)
+export(print.RepCVDesc)
+export(print.ResampleDesc)
+export(print.ResampleInstance)
+export(print.ResamplePrediction)
+export(print.ResampleResult)
+export(print.SubsampleDesc)
+export(print.SupervisedTask)
+export(print.Task)
+export(print.TuneControl)
+export(print.TuneMultiCritControl)
+export(print.TuneMultiCritResult)
+export(print.TuneResult)
+export(print.UnsupervisedTask)
+export(print.WrappedModel)
 export(reimpute)
 export(removeConstantFeatures)
 export(removeHyperPars)
