add new learner regr.btlm (from package tgp)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -103,6 +103,7 @@ S3method(makeRLearner,regr.bdk)
 S3method(makeRLearner,regr.blackboost)
 S3method(makeRLearner,regr.blm)
 S3method(makeRLearner,regr.brnn)
+S3method(makeRLearner,regr.btlm)
 S3method(makeRLearner,regr.cforest)
 S3method(makeRLearner,regr.crs)
 S3method(makeRLearner,regr.ctree)
@@ -229,6 +230,7 @@ S3method(predictLearner,regr.bartMachine)
 S3method(predictLearner,regr.bdk)
 S3method(predictLearner,regr.blm)
 S3method(predictLearner,regr.brnn)
+S3method(predictLearner,regr.btlm)
 S3method(predictLearner,regr.cforest)
 S3method(predictLearner,regr.crs)
 S3method(predictLearner,regr.ctree)
@@ -364,6 +366,7 @@ S3method(trainLearner,regr.bartMachine)
 S3method(trainLearner,regr.bdk)
 S3method(trainLearner,regr.blm)
 S3method(trainLearner,regr.brnn)
+S3method(trainLearner,regr.btlm)
 S3method(trainLearner,regr.cforest)
 S3method(trainLearner,regr.crs)
 S3method(trainLearner,regr.ctree)
