add new learner regr.bcart (from package tgp)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -99,6 +99,7 @@ S3method(makeRLearner,cluster.cmeans)
 S3method(makeRLearner,cluster.kmeans)
 S3method(makeRLearner,regr.IBk)
 S3method(makeRLearner,regr.bartMachine)
+S3method(makeRLearner,regr.bcart)
 S3method(makeRLearner,regr.bdk)
 S3method(makeRLearner,regr.blackboost)
 S3method(makeRLearner,regr.blm)
@@ -227,6 +228,7 @@ S3method(predictLearner,cluster.cmeans)
 S3method(predictLearner,cluster.kmeans)
 S3method(predictLearner,regr.IBk)
 S3method(predictLearner,regr.bartMachine)
+S3method(predictLearner,regr.bcart)
 S3method(predictLearner,regr.bdk)
 S3method(predictLearner,regr.blm)
 S3method(predictLearner,regr.brnn)
@@ -363,6 +365,7 @@ S3method(trainLearner,cluster.cmeans)
 S3method(trainLearner,cluster.kmeans)
 S3method(trainLearner,regr.IBk)
 S3method(trainLearner,regr.bartMachine)
+S3method(trainLearner,regr.bcart)
 S3method(trainLearner,regr.bdk)
 S3method(trainLearner,regr.blm)
 S3method(trainLearner,regr.brnn)
