add new learner regr.bgp (from package tgp)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -101,6 +101,7 @@ S3method(makeRLearner,regr.IBk)
 S3method(makeRLearner,regr.bartMachine)
 S3method(makeRLearner,regr.bcart)
 S3method(makeRLearner,regr.bdk)
+S3method(makeRLearner,regr.bgp)
 S3method(makeRLearner,regr.blackboost)
 S3method(makeRLearner,regr.blm)
 S3method(makeRLearner,regr.brnn)
@@ -230,6 +231,7 @@ S3method(predictLearner,regr.IBk)
 S3method(predictLearner,regr.bartMachine)
 S3method(predictLearner,regr.bcart)
 S3method(predictLearner,regr.bdk)
+S3method(predictLearner,regr.bgp)
 S3method(predictLearner,regr.blm)
 S3method(predictLearner,regr.brnn)
 S3method(predictLearner,regr.btlm)
@@ -367,6 +369,7 @@ S3method(trainLearner,regr.IBk)
 S3method(trainLearner,regr.bartMachine)
 S3method(trainLearner,regr.bcart)
 S3method(trainLearner,regr.bdk)
+S3method(trainLearner,regr.bgp)
 S3method(trainLearner,regr.blm)
 S3method(trainLearner,regr.brnn)
 S3method(trainLearner,regr.btlm)
