--- a/NAMESPACE
+++ b/NAMESPACE
@@ -102,6 +102,7 @@ S3method(makeRLearner,regr.bartMachine)
 S3method(makeRLearner,regr.bcart)
 S3method(makeRLearner,regr.bdk)
 S3method(makeRLearner,regr.bgp)
+S3method(makeRLearner,regr.bgpllm)
 S3method(makeRLearner,regr.blackboost)
 S3method(makeRLearner,regr.blm)
 S3method(makeRLearner,regr.brnn)
@@ -232,6 +233,7 @@ S3method(predictLearner,regr.bartMachine)
 S3method(predictLearner,regr.bcart)
 S3method(predictLearner,regr.bdk)
 S3method(predictLearner,regr.bgp)
+S3method(predictLearner,regr.bgpllm)
 S3method(predictLearner,regr.blm)
 S3method(predictLearner,regr.brnn)
 S3method(predictLearner,regr.btlm)
@@ -370,6 +372,7 @@ S3method(trainLearner,regr.bartMachine)
 S3method(trainLearner,regr.bcart)
 S3method(trainLearner,regr.bdk)
 S3method(trainLearner,regr.bgp)
+S3method(trainLearner,regr.bgpllm)
 S3method(trainLearner,regr.blm)
 S3method(trainLearner,regr.brnn)
 S3method(trainLearner,regr.btlm)
