add new learner regr.btgp (from package tgp)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -106,6 +106,7 @@ S3method(makeRLearner,regr.bgpllm)
 S3method(makeRLearner,regr.blackboost)
 S3method(makeRLearner,regr.blm)
 S3method(makeRLearner,regr.brnn)
+S3method(makeRLearner,regr.btgp)
 S3method(makeRLearner,regr.btlm)
 S3method(makeRLearner,regr.cforest)
 S3method(makeRLearner,regr.crs)
@@ -236,6 +237,7 @@ S3method(predictLearner,regr.bgp)
 S3method(predictLearner,regr.bgpllm)
 S3method(predictLearner,regr.blm)
 S3method(predictLearner,regr.brnn)
+S3method(predictLearner,regr.btgp)
 S3method(predictLearner,regr.btlm)
 S3method(predictLearner,regr.cforest)
 S3method(predictLearner,regr.crs)
@@ -375,6 +377,7 @@ S3method(trainLearner,regr.bgp)
 S3method(trainLearner,regr.bgpllm)
 S3method(trainLearner,regr.blm)
 S3method(trainLearner,regr.brnn)
+S3method(trainLearner,regr.btgp)
 S3method(trainLearner,regr.btlm)
 S3method(trainLearner,regr.cforest)
 S3method(trainLearner,regr.crs)
