add new learner regr.btgpllm (from package tgp)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -107,6 +107,7 @@ S3method(makeRLearner,regr.blackboost)
 S3method(makeRLearner,regr.blm)
 S3method(makeRLearner,regr.brnn)
 S3method(makeRLearner,regr.btgp)
+S3method(makeRLearner,regr.btgpllm)
 S3method(makeRLearner,regr.btlm)
 S3method(makeRLearner,regr.cforest)
 S3method(makeRLearner,regr.crs)
@@ -238,6 +239,7 @@ S3method(predictLearner,regr.bgpllm)
 S3method(predictLearner,regr.blm)
 S3method(predictLearner,regr.brnn)
 S3method(predictLearner,regr.btgp)
+S3method(predictLearner,regr.btgpllm)
 S3method(predictLearner,regr.btlm)
 S3method(predictLearner,regr.cforest)
 S3method(predictLearner,regr.crs)
@@ -378,6 +380,7 @@ S3method(trainLearner,regr.bgpllm)
 S3method(trainLearner,regr.blm)
 S3method(trainLearner,regr.brnn)
 S3method(trainLearner,regr.btgp)
+S3method(trainLearner,regr.btgpllm)
 S3method(trainLearner,regr.btlm)
 S3method(trainLearner,regr.cforest)
 S3method(trainLearner,regr.crs)
