add new learner regr.laGP

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -122,6 +122,7 @@ S3method(makeRLearner,regr.glmnet)
 S3method(makeRLearner,regr.kknn)
 S3method(makeRLearner,regr.km)
 S3method(makeRLearner,regr.ksvm)
+S3method(makeRLearner,regr.laGP)
 S3method(makeRLearner,regr.lm)
 S3method(makeRLearner,regr.mars)
 S3method(makeRLearner,regr.mob)
@@ -254,6 +255,7 @@ S3method(predictLearner,regr.glmnet)
 S3method(predictLearner,regr.kknn)
 S3method(predictLearner,regr.km)
 S3method(predictLearner,regr.ksvm)
+S3method(predictLearner,regr.laGP)
 S3method(predictLearner,regr.lm)
 S3method(predictLearner,regr.mars)
 S3method(predictLearner,regr.mob)
@@ -428,6 +430,7 @@ S3method(trainLearner,regr.glmnet)
 S3method(trainLearner,regr.kknn)
 S3method(trainLearner,regr.km)
 S3method(trainLearner,regr.ksvm)
+S3method(trainLearner,regr.laGP)
 S3method(trainLearner,regr.lm)
 S3method(trainLearner,regr.mars)
 S3method(trainLearner,regr.mob)
