--- a/NAMESPACE
+++ b/NAMESPACE
@@ -670,6 +670,7 @@ export(subsample)
 export(subsetTask)
 export(summarizeColumns)
 export(summarizeLevels)
+export(test.join)
 export(test.max)
 export(test.mean)
 export(test.median)
