--- a/NAMESPACE
+++ b/NAMESPACE
@@ -83,7 +83,6 @@ S3method(makeRLearner,classif.qda)
 S3method(makeRLearner,classif.quaDA)
 S3method(makeRLearner,classif.randomForest)
 S3method(makeRLearner,classif.randomForestSRC)
-S3method(makeRLearner,classif.randomUniformForest)
 S3method(makeRLearner,classif.rda)
 S3method(makeRLearner,classif.rpart)
 S3method(makeRLearner,classif.rrlda)
@@ -133,7 +132,6 @@ S3method(makeRLearner,regr.penalized.ridge)
 S3method(makeRLearner,regr.plsr)
 S3method(makeRLearner,regr.randomForest)
 S3method(makeRLearner,regr.randomForestSRC)
-S3method(makeRLearner,regr.randomUniformForest)
 S3method(makeRLearner,regr.rpart)
 S3method(makeRLearner,regr.rsm)
 S3method(makeRLearner,regr.rvm)
@@ -217,7 +215,6 @@ S3method(predictLearner,classif.qda)
 S3method(predictLearner,classif.quaDA)
 S3method(predictLearner,classif.randomForest)
 S3method(predictLearner,classif.randomForestSRC)
-S3method(predictLearner,classif.randomUniformForest)
 S3method(predictLearner,classif.rda)
 S3method(predictLearner,classif.rpart)
 S3method(predictLearner,classif.rrlda)
@@ -266,7 +263,6 @@ S3method(predictLearner,regr.penalized.ridge)
 S3method(predictLearner,regr.plsr)
 S3method(predictLearner,regr.randomForest)
 S3method(predictLearner,regr.randomForestSRC)
-S3method(predictLearner,regr.randomUniformForest)
 S3method(predictLearner,regr.rpart)
 S3method(predictLearner,regr.rsm)
 S3method(predictLearner,regr.rvm)
@@ -283,39 +279,6 @@ S3method(predictLearner,surv.optimCoxBoostPenalty)
 S3method(predictLearner,surv.penalized)
 S3method(predictLearner,surv.randomForestSRC)
 S3method(predictLearner,surv.rpart)
-S3method(print,Aggregation)
-S3method(print,BaggingModel)
-S3method(print,BaseWrapper)
-S3method(print,BaseWrapperModel)
-S3method(print,BenchmarkResult)
-S3method(print,ClassifTask)
-S3method(print,ClusterTask)
-S3method(print,CostSensTask)
-S3method(print,FailureModel)
-S3method(print,FeatSelControl)
-S3method(print,FeatSelResult)
-S3method(print,Filter)
-S3method(print,FilterValues)
-S3method(print,HoldoutDesc)
-S3method(print,ImputationDesc)
-S3method(print,Learner)
-S3method(print,Measure)
-S3method(print,OptModel)
-S3method(print,Prediction)
-S3method(print,RepCVDesc)
-S3method(print,ResampleDesc)
-S3method(print,ResampleInstance)
-S3method(print,ResamplePrediction)
-S3method(print,ResampleResult)
-S3method(print,SubsampleDesc)
-S3method(print,SupervisedTask)
-S3method(print,Task)
-S3method(print,TuneControl)
-S3method(print,TuneMultiCritControl)
-S3method(print,TuneMultiCritResult)
-S3method(print,TuneResult)
-S3method(print,UnsupervisedTask)
-S3method(print,WrappedModel)
 S3method(reimpute,data.frame)
 S3method(reimpute,list)
 S3method(removeHyperPars,BaseEnsemble)
@@ -392,7 +355,6 @@ S3method(trainLearner,classif.qda)
 S3method(trainLearner,classif.quaDA)
 S3method(trainLearner,classif.randomForest)
 S3method(trainLearner,classif.randomForestSRC)
-S3method(trainLearner,classif.randomUniformForest)
 S3method(trainLearner,classif.rda)
 S3method(trainLearner,classif.rpart)
 S3method(trainLearner,classif.rrlda)
@@ -441,7 +403,6 @@ S3method(trainLearner,regr.penalized.ridge)
 S3method(trainLearner,regr.plsr)
 S3method(trainLearner,regr.randomForest)
 S3method(trainLearner,regr.randomForestSRC)
-S3method(trainLearner,regr.randomUniformForest)
 S3method(trainLearner,regr.rpart)
 S3method(trainLearner,regr.rsm)
 S3method(trainLearner,regr.rvm)
@@ -646,6 +607,39 @@ export(plotTuneMultiCritResult)
 export(plotViperCharts)
 export(ppv)
 export(predictLearner)
+export(print.Aggregation)
+export(print.BaggingModel)
+export(print.BaseWrapper)
+export(print.BaseWrapperModel)
+export(print.BenchmarkResult)
+export(print.ClassifTask)
+export(print.ClusterTask)
+export(print.CostSensTask)
+export(print.FailureModel)
+export(print.FeatSelControl)
+export(print.FeatSelResult)
+export(print.Filter)
+export(print.FilterValues)
+export(print.HoldoutDesc)
+export(print.ImputationDesc)
+export(print.Learner)
+export(print.Measure)
+export(print.OptModel)
+export(print.Prediction)
+export(print.RepCVDesc)
+export(print.ResampleDesc)
+export(print.ResampleInstance)
+export(print.ResamplePrediction)
+export(print.ResampleResult)
+export(print.SubsampleDesc)
+export(print.SupervisedTask)
+export(print.Task)
+export(print.TuneControl)
+export(print.TuneMultiCritControl)
+export(print.TuneMultiCritResult)
+export(print.TuneResult)
+export(print.UnsupervisedTask)
+export(print.WrappedModel)
 export(reimpute)
 export(removeConstantFeatures)
 export(removeHyperPars)
@@ -659,6 +653,7 @@ export(setAggregation)
 export(setHyperPars)
 export(setHyperPars2)
 export(setId)
+export(setPredictThreshold)
 export(setPredictType)
 export(setProperties)
 export(setThreshold)
