tut: add caret again to build...

--- a/tutorial/build
+++ b/tutorial/build
@@ -67,6 +67,7 @@ suppressPackageStartupMessages({
   library(knitr)
   library(stringr)
   library(digest)
+  library(caret) # we get problems if this shadows "mlr::train"
   library(mlr)
 })
 
