update NAMESPACE and man files

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -486,6 +486,7 @@ export(fn)
 export(fnr)
 export(fp)
 export(fpr)
+export(generateLearningCurve)
 export(getBMRAggrPerformances)
 export(getBMRFeatSelResults)
 export(getBMRFilteredFeatures)
@@ -514,6 +515,7 @@ export(getTaskFormula)
 export(getTaskFormulaAsString)
 export(getTaskId)
 export(getTaskNFeats)
+export(getTaskSize)
 export(getTaskTargetNames)
 export(getTaskTargets)
 export(getTaskType)
@@ -633,6 +635,7 @@ export(oversample)
 export(performance)
 export(plotFilterValues)
 export(plotLearnerPrediction)
+export(plotLearningCurve)
 export(plotROCRCurves)
 export(plotThreshVsPerf)
 export(plotTuneMultiCritResult)
