--- a/NAMESPACE
+++ b/NAMESPACE
@@ -468,6 +468,7 @@ export(ber)
 export(bootstrapB632)
 export(bootstrapB632plus)
 export(bootstrapOOB)
+export(brier)
 export(capLargeValues)
 export(cindex)
 export(configureMlr)
@@ -603,6 +604,7 @@ export(meancosts)
 export(measureACC)
 export(measureAUC)
 export(measureBAC)
+export(measureBrier)
 export(measureFDR)
 export(measureFN)
 export(measureFNR)
