fix getParamSet for strings

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ S3method(getLearnerModel,ModelMultiplexerModel)
 S3method(getLearnerModel,WrappedModel)
 S3method(getParamSet,BaseWrapper)
 S3method(getParamSet,Learner)
+S3method(getParamSet,character)
 S3method(isFailureModel,BaseWrapperModel)
 S3method(isFailureModel,FailureModel)
 S3method(isFailureModel,HomogeneousEnsembleModel)
