--- a/NAMESPACE
+++ b/NAMESPACE
@@ -76,6 +76,7 @@ S3method(makeRLearner,classif.lvq1)
 S3method(makeRLearner,classif.mda)
 S3method(makeRLearner,classif.multinom)
 S3method(makeRLearner,classif.naiveBayes)
+S3method(makeRLearner,classif.neuralnet)
 S3method(makeRLearner,classif.nnet)
 S3method(makeRLearner,classif.plr)
 S3method(makeRLearner,classif.plsdaCaret)
@@ -209,6 +210,7 @@ S3method(predictLearner,classif.lvq1)
 S3method(predictLearner,classif.mda)
 S3method(predictLearner,classif.multinom)
 S3method(predictLearner,classif.naiveBayes)
+S3method(predictLearner,classif.neuralnet)
 S3method(predictLearner,classif.nnet)
 S3method(predictLearner,classif.plr)
 S3method(predictLearner,classif.plsdaCaret)
@@ -382,6 +384,7 @@ S3method(trainLearner,classif.lvq1)
 S3method(trainLearner,classif.mda)
 S3method(trainLearner,classif.multinom)
 S3method(trainLearner,classif.naiveBayes)
+S3method(trainLearner,classif.neuralnet)
 S3method(trainLearner,classif.nnet)
 S3method(trainLearner,classif.plr)
 S3method(trainLearner,classif.plsdaCaret)
