add avNNet learner

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -51,6 +51,7 @@ S3method(makeRLearner,classif.LiblineaRMultiClass)
 S3method(makeRLearner,classif.OneR)
 S3method(makeRLearner,classif.PART)
 S3method(makeRLearner,classif.ada)
+S3method(makeRLearner,classif.avNNet)
 S3method(makeRLearner,classif.bartMachine)
 S3method(makeRLearner,classif.bdk)
 S3method(makeRLearner,classif.binomial)
@@ -185,6 +186,7 @@ S3method(predictLearner,classif.LiblineaRMultiClass)
 S3method(predictLearner,classif.OneR)
 S3method(predictLearner,classif.PART)
 S3method(predictLearner,classif.ada)
+S3method(predictLearner,classif.avNNet)
 S3method(predictLearner,classif.bartMachine)
 S3method(predictLearner,classif.bdk)
 S3method(predictLearner,classif.binomial)
@@ -359,6 +361,7 @@ S3method(trainLearner,classif.LiblineaRMultiClass)
 S3method(trainLearner,classif.OneR)
 S3method(trainLearner,classif.PART)
 S3method(trainLearner,classif.ada)
+S3method(trainLearner,classif.avNNet)
 S3method(trainLearner,classif.bartMachine)
 S3method(trainLearner,classif.bdk)
 S3method(trainLearner,classif.binomial)
