--- a/NAMESPACE
+++ b/NAMESPACE
@@ -100,6 +100,7 @@ S3method(makeRLearner,cluster.XMeans)
 S3method(makeRLearner,cluster.cmeans)
 S3method(makeRLearner,cluster.kmeans)
 S3method(makeRLearner,regr.IBk)
+S3method(makeRLearner,regr.avNNet)
 S3method(makeRLearner,regr.bartMachine)
 S3method(makeRLearner,regr.bcart)
 S3method(makeRLearner,regr.bdk)
@@ -235,6 +236,7 @@ S3method(predictLearner,cluster.XMeans)
 S3method(predictLearner,cluster.cmeans)
 S3method(predictLearner,cluster.kmeans)
 S3method(predictLearner,regr.IBk)
+S3method(predictLearner,regr.avNNet)
 S3method(predictLearner,regr.bartMachine)
 S3method(predictLearner,regr.bcart)
 S3method(predictLearner,regr.bdk)
@@ -410,6 +412,7 @@ S3method(trainLearner,cluster.XMeans)
 S3method(trainLearner,cluster.cmeans)
 S3method(trainLearner,cluster.kmeans)
 S3method(trainLearner,regr.IBk)
+S3method(trainLearner,regr.avNNet)
 S3method(trainLearner,regr.bartMachine)
 S3method(trainLearner,regr.bcart)
 S3method(trainLearner,regr.bdk)
