--- a/NAMESPACE
+++ b/NAMESPACE
@@ -88,6 +88,8 @@ S3method(makeRLearner,classif.rda)
 S3method(makeRLearner,classif.rpart)
 S3method(makeRLearner,classif.rrlda)
 S3method(makeRLearner,classif.sda)
+S3method(makeRLearner,classif.sparseLDA)
+S3method(makeRLearner,classif.sparseMDA)
 S3method(makeRLearner,classif.svm)
 S3method(makeRLearner,classif.xgboost)
 S3method(makeRLearner,classif.xyf)
@@ -221,6 +223,7 @@ S3method(predictLearner,classif.rda)
 S3method(predictLearner,classif.rpart)
 S3method(predictLearner,classif.rrlda)
 S3method(predictLearner,classif.sda)
+S3method(predictLearner,classif.sparseLDA)
 S3method(predictLearner,classif.svm)
 S3method(predictLearner,classif.xgboost)
 S3method(predictLearner,classif.xyf)
@@ -394,6 +397,8 @@ S3method(trainLearner,classif.rda)
 S3method(trainLearner,classif.rpart)
 S3method(trainLearner,classif.rrlda)
 S3method(trainLearner,classif.sda)
+S3method(trainLearner,classif.sparseLDA)
+S3method(trainLearner,classif.sparseMDA)
 S3method(trainLearner,classif.svm)
 S3method(trainLearner,classif.xgboost)
 S3method(trainLearner,classif.xyf)
