added learners from sparseLDA package

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -224,6 +224,7 @@ S3method(predictLearner,classif.rpart)
 S3method(predictLearner,classif.rrlda)
 S3method(predictLearner,classif.sda)
 S3method(predictLearner,classif.sparseLDA)
+S3method(predictLearner,classif.sparseMDA)
 S3method(predictLearner,classif.svm)
 S3method(predictLearner,classif.xgboost)
 S3method(predictLearner,classif.xyf)
