--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -102,8 +102,7 @@ Suggests:
     stepPlr,
     testthat,
     tgp,
-    TH.data,
-    xgboost
+    TH.data
 LazyData: yes
 ByteCompile: yes
 Version: 2.4
