updated DESCRIPTION and NEWS

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -57,6 +57,7 @@ Suggests:
     DiscriMiner,
     e1071,
     earth,
+    elasticnet,
     elmNN,
     emoa,
     extraTrees,
@@ -98,6 +99,7 @@ Suggests:
     rsm,
     RWeka,
     sda,
+    sparseLDA,
     stepPlr,
     testthat,
     tgp,
