Final commit for #247

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -88,6 +88,7 @@ S3method(makeRLearner,classif.rda)
 S3method(makeRLearner,classif.rpart)
 S3method(makeRLearner,classif.rrlda)
 S3method(makeRLearner,classif.sda)
+S3method(makeRLearner,classif.sparseLDA)
 S3method(makeRLearner,classif.svm)
 S3method(makeRLearner,classif.xyf)
 S3method(makeRLearner,cluster.EM)
@@ -219,6 +220,7 @@ S3method(predictLearner,classif.rda)
 S3method(predictLearner,classif.rpart)
 S3method(predictLearner,classif.rrlda)
 S3method(predictLearner,classif.sda)
+S3method(predictLearner,classif.sparseLDA)
 S3method(predictLearner,classif.svm)
 S3method(predictLearner,classif.xyf)
 S3method(predictLearner,cluster.EM)
@@ -390,6 +392,7 @@ S3method(trainLearner,classif.rda)
 S3method(trainLearner,classif.rpart)
 S3method(trainLearner,classif.rrlda)
 S3method(trainLearner,classif.sda)
+S3method(trainLearner,classif.sparseLDA)
 S3method(trainLearner,classif.svm)
 S3method(trainLearner,classif.xyf)
 S3method(trainLearner,cluster.EM)
