update suggested version of randomForestSRC, see #282

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -89,7 +89,7 @@ Suggests:
     pls,
     pROC,
     randomForest,
-    randomForestSRC,
+    randomForestSRC (>= 1.6.1),
     RCurl,
     rjson,
     robustbase,
