--- a/.travis.yml
+++ b/.travis.yml
@@ -35,6 +35,7 @@ r_binary_packages:
     - kernlab
     - kknn
     - klaR
+    - knitr
     - kohonen
     - LiblineaR
     - MASS
@@ -44,7 +45,6 @@ r_binary_packages:
     - mlbench
     - modeltools
     - nnet
-    - party
     - penalized
     - pls
     - pROC
