update my email address and fix vignette build (hopefully)

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,7 +18,7 @@ Authors@R: c(person("Bernd", "Bischl", email = "bernd_bischl@gmx.net", role =
     person("Tobias", "Kuehn", email = "tobi.kuehn@gmx.de", role = "aut"),
     person("Erich", "Studerus", email = "erich.studerus@upkbs.ch", role =
     "aut"), person("Lars", "Kotthoff", email =
-    "lars.kotthoff@insight-centre.org", role = "aut"))
+    "larsko@cs.ubc.ca", role = "aut"))
 URL: https://github.com/berndbischl/mlr
 BugReports: https://github.com/berndbischl/mlr/issues
 License: BSD_3_clause + file LICENSE
