--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -88,7 +88,7 @@ Suggests:
     party,
     penalized,
     pls,
-    pROC,
+    pROC (>= 1.8),
     randomForest,
     randomForestSRC (>= 1.6.1),
     RCurl,
