--- a/NAMESPACE
+++ b/NAMESPACE
@@ -78,6 +78,7 @@ S3method(makeRLearner,classif.multinom)
 S3method(makeRLearner,classif.naiveBayes)
 S3method(makeRLearner,classif.nnet)
 S3method(makeRLearner,classif.nodeHarvest)
+S3method(makeRLearner,classif.pamr)
 S3method(makeRLearner,classif.plr)
 S3method(makeRLearner,classif.plsdaCaret)
 S3method(makeRLearner,classif.probit)
@@ -214,6 +215,7 @@ S3method(predictLearner,classif.multinom)
 S3method(predictLearner,classif.naiveBayes)
 S3method(predictLearner,classif.nnet)
 S3method(predictLearner,classif.nodeHarvest)
+S3method(predictLearner,classif.pamr)
 S3method(predictLearner,classif.plr)
 S3method(predictLearner,classif.plsdaCaret)
 S3method(predictLearner,classif.probit)
@@ -390,6 +392,7 @@ S3method(trainLearner,classif.multinom)
 S3method(trainLearner,classif.naiveBayes)
 S3method(trainLearner,classif.nnet)
 S3method(trainLearner,classif.nodeHarvest)
+S3method(trainLearner,classif.pamr)
 S3method(trainLearner,classif.plr)
 S3method(trainLearner,classif.plsdaCaret)
 S3method(trainLearner,classif.probit)
