--- a/NAMESPACE
+++ b/NAMESPACE
@@ -56,6 +56,7 @@ S3method(makeRLearner,classif.bdk)
 S3method(makeRLearner,classif.binomial)
 S3method(makeRLearner,classif.blackboost)
 S3method(makeRLearner,classif.boosting)
+S3method(makeRLearner,classif.bst)
 S3method(makeRLearner,classif.cforest)
 S3method(makeRLearner,classif.ctree)
 S3method(makeRLearner,classif.extraTrees)
@@ -193,6 +194,7 @@ S3method(predictLearner,classif.bdk)
 S3method(predictLearner,classif.binomial)
 S3method(predictLearner,classif.blackboost)
 S3method(predictLearner,classif.boosting)
+S3method(predictLearner,classif.bst)
 S3method(predictLearner,classif.cforest)
 S3method(predictLearner,classif.ctree)
 S3method(predictLearner,classif.extraTrees)
@@ -370,6 +372,7 @@ S3method(trainLearner,classif.bdk)
 S3method(trainLearner,classif.binomial)
 S3method(trainLearner,classif.blackboost)
 S3method(trainLearner,classif.boosting)
+S3method(trainLearner,classif.bst)
 S3method(trainLearner,classif.cforest)
 S3method(trainLearner,classif.ctree)
 S3method(trainLearner,classif.extraTrees)
