Add learner regr.slim

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -143,6 +143,7 @@ S3method(makeRLearner,regr.randomForestSRC)
 S3method(makeRLearner,regr.rpart)
 S3method(makeRLearner,regr.rsm)
 S3method(makeRLearner,regr.rvm)
+S3method(makeRLearner,regr.slim)
 S3method(makeRLearner,regr.svm)
 S3method(makeRLearner,regr.xyf)
 S3method(makeRLearner,surv.CoxBoost)
@@ -281,6 +282,7 @@ S3method(predictLearner,regr.randomForestSRC)
 S3method(predictLearner,regr.rpart)
 S3method(predictLearner,regr.rsm)
 S3method(predictLearner,regr.rvm)
+S3method(predictLearner,regr.slim)
 S3method(predictLearner,regr.svm)
 S3method(predictLearner,regr.xyf)
 S3method(predictLearner,surv.CoxBoost)
@@ -460,6 +462,7 @@ S3method(trainLearner,regr.randomForestSRC)
 S3method(trainLearner,regr.rpart)
 S3method(trainLearner,regr.rsm)
 S3method(trainLearner,regr.rvm)
+S3method(trainLearner,regr.slim)
 S3method(trainLearner,regr.svm)
 S3method(trainLearner,regr.xyf)
 S3method(trainLearner,surv.CoxBoost)
