Add learner regr.bst

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -112,6 +112,7 @@ S3method(makeRLearner,regr.bgpllm)
 S3method(makeRLearner,regr.blackboost)
 S3method(makeRLearner,regr.blm)
 S3method(makeRLearner,regr.brnn)
+S3method(makeRLearner,regr.bst)
 S3method(makeRLearner,regr.btgp)
 S3method(makeRLearner,regr.btgpllm)
 S3method(makeRLearner,regr.btlm)
@@ -251,6 +252,7 @@ S3method(predictLearner,regr.bgp)
 S3method(predictLearner,regr.bgpllm)
 S3method(predictLearner,regr.blm)
 S3method(predictLearner,regr.brnn)
+S3method(predictLearner,regr.bst)
 S3method(predictLearner,regr.btgp)
 S3method(predictLearner,regr.btgpllm)
 S3method(predictLearner,regr.btlm)
@@ -431,6 +433,7 @@ S3method(trainLearner,regr.bgp)
 S3method(trainLearner,regr.bgpllm)
 S3method(trainLearner,regr.blm)
 S3method(trainLearner,regr.brnn)
+S3method(trainLearner,regr.bst)
 S3method(trainLearner,regr.btgp)
 S3method(trainLearner,regr.btgpllm)
 S3method(trainLearner,regr.btlm)
