--- a/NAMESPACE
+++ b/NAMESPACE
@@ -124,6 +124,7 @@ S3method(makeRLearner,regr.earth)
 S3method(makeRLearner,regr.elmNN)
 S3method(makeRLearner,regr.extraTrees)
 S3method(makeRLearner,regr.fnn)
+S3method(makeRLearner,regr.frbs)
 S3method(makeRLearner,regr.gbm)
 S3method(makeRLearner,regr.glmnet)
 S3method(makeRLearner,regr.kknn)
@@ -264,6 +265,7 @@ S3method(predictLearner,regr.earth)
 S3method(predictLearner,regr.elmNN)
 S3method(predictLearner,regr.extraTrees)
 S3method(predictLearner,regr.fnn)
+S3method(predictLearner,regr.frbs)
 S3method(predictLearner,regr.gbm)
 S3method(predictLearner,regr.glmnet)
 S3method(predictLearner,regr.kknn)
@@ -445,6 +447,7 @@ S3method(trainLearner,regr.earth)
 S3method(trainLearner,regr.elmNN)
 S3method(trainLearner,regr.extraTrees)
 S3method(trainLearner,regr.fnn)
+S3method(trainLearner,regr.frbs)
 S3method(trainLearner,regr.gbm)
 S3method(trainLearner,regr.glmnet)
 S3method(trainLearner,regr.kknn)
