--- a/NAMESPACE
+++ b/NAMESPACE
@@ -166,6 +166,7 @@ S3method(makeWrappedModel,ModelMultiplexer)
 S3method(makeWrappedModel,TuneWrapper)
 S3method(plotROCRCurves,BenchmarkResult)
 S3method(plotROCRCurves,Prediction)
+S3method(plotROCRCurves,PredictionMultilabel)
 S3method(plotROCRCurves,ResampleResult)
 S3method(plotROCRCurves,list)
 S3method(plotViperCharts,BenchmarkResult)
