--- a/NAMESPACE
+++ b/NAMESPACE
@@ -319,6 +319,7 @@ S3method(print,HoldoutDesc)
 S3method(print,ImputationDesc)
 S3method(print,Learner)
 S3method(print,Measure)
+S3method(print,MultilabelModel)
 S3method(print,OptModel)
 S3method(print,Prediction)
 S3method(print,PredictionMultilabel)
@@ -606,6 +607,7 @@ export(makeModelMultiplexer)
 export(makeModelMultiplexerParamSet)
 export(makeMulticlassWrapper)
 export(makeMultilabelTask)
+export(makeMultilabelWrapper)
 export(makeOverBaggingWrapper)
 export(makeOversampleWrapper)
 export(makePreprocWrapper)
