--- a/NAMESPACE
+++ b/NAMESPACE
@@ -516,7 +516,7 @@ export(fn)
 export(fnr)
 export(fp)
 export(fpr)
-export(generateLearningCurve)
+export(generateLearningCurveData)
 export(generateROCRCurvesData)
 export(getBMRAggrPerformances)
 export(getBMRFeatSelResults)
