--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,7 +18,8 @@ Authors@R: c(person("Bernd", "Bischl", email = "bernd_bischl@gmx.net", role =
     person("Tobias", "Kuehn", email = "tobi.kuehn@gmx.de", role = "aut"),
     person("Erich", "Studerus", email = "erich.studerus@upkbs.ch", role =
     "aut"), person("Lars", "Kotthoff", email =
-    "larsko@cs.ubc.ca", role = "aut"))
+    "larsko@cs.ubc.ca", role = "aut"), person("Zachary", "Jones", email =
+    "zmj@zmjones.com", role = "ctb"))
 URL: https://github.com/berndbischl/mlr
 BugReports: https://github.com/berndbischl/mlr/issues
 License: BSD_3_clause + file LICENSE
@@ -32,9 +33,11 @@ Depends:
     stats
 Imports:
     checkmate (>= 1.5.1),
+    ggvis,
     parallelMap (>= 1.3),
     plyr,
     reshape2,
+    shiny,
     survival
 Suggests:
     ada,
