--- a/NAMESPACE
+++ b/NAMESPACE
@@ -669,11 +669,16 @@ export(npv)
 export(oversample)
 export(performance)
 export(plotFilterValues)
+export(plotFilterValuesGGVIS)
 export(plotLearnerPrediction)
 export(plotLearningCurve)
+export(plotLearningCurveGGVIS)
 export(plotROCRCurves)
+export(plotROCRCurvesGGVIS)
 export(plotThreshVsPerf)
+export(plotThreshVsPerfGGVIS)
 export(plotTuneMultiCritResult)
+export(plotTuneMultiCritResultGGVIS)
 export(plotViperCharts)
 export(ppv)
 export(predictLearner)
