--- a/NAMESPACE
+++ b/NAMESPACE
@@ -513,6 +513,7 @@ export(fn)
 export(fnr)
 export(fp)
 export(fpr)
+export(generateFilterValuesData)
 export(generateLearningCurveData)
 export(generateROCRCurvesData)
 export(getBMRAggrPerformances)
