Add classif.wsrf back again

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -99,6 +99,7 @@ S3method(makeRLearner,classif.rrlda)
 S3method(makeRLearner,classif.sda)
 S3method(makeRLearner,classif.sparseLDA)
 S3method(makeRLearner,classif.svm)
+S3method(makeRLearner,classif.wsrf)
 S3method(makeRLearner,classif.xyf)
 S3method(makeRLearner,cluster.EM)
 S3method(makeRLearner,cluster.FarthestFirst)
@@ -236,6 +237,7 @@ S3method(predictLearner,classif.rrlda)
 S3method(predictLearner,classif.sda)
 S3method(predictLearner,classif.sparseLDA)
 S3method(predictLearner,classif.svm)
+S3method(predictLearner,classif.wsrf)
 S3method(predictLearner,classif.xyf)
 S3method(predictLearner,cluster.EM)
 S3method(predictLearner,cluster.FarthestFirst)
@@ -418,6 +420,7 @@ S3method(trainLearner,classif.rrlda)
 S3method(trainLearner,classif.sda)
 S3method(trainLearner,classif.sparseLDA)
 S3method(trainLearner,classif.svm)
+S3method(trainLearner,classif.wsrf)
 S3method(trainLearner,classif.xyf)
 S3method(trainLearner,cluster.EM)
 S3method(trainLearner,cluster.FarthestFirst)
