--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -114,7 +114,8 @@ Suggests:
     stepPlr,
     testthat,
     tgp,
-    TH.data
+    TH.data,
+    wsrf (>= 1.5.14)
 LazyData: yes
 ByteCompile: yes
 Version: 2.4
