--- a/NAMESPACE
+++ b/NAMESPACE
@@ -313,6 +313,7 @@ S3method(print,FilterValues)
 S3method(print,HoldoutDesc)
 S3method(print,ImputationDesc)
 S3method(print,Learner)
+S3method(print,LearningCurveData)
 S3method(print,Measure)
 S3method(print,OptModel)
 S3method(print,Prediction)
