--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -114,8 +114,7 @@ Suggests:
     stepPlr,
     testthat,
     tgp,
-    TH.data,
-    wsrf (>= 1.5.14)
+    TH.data
 LazyData: yes
 ByteCompile: yes
 Version: 2.4
