--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,10 @@ S3method(generateROCRCurvesData,BenchmarkResult)
 S3method(generateROCRCurvesData,Prediction)
 S3method(generateROCRCurvesData,ResampleResult)
 S3method(generateROCRCurvesData,list)
+S3method(generateThreshVsPerfData,BenchmarkResult)
+S3method(generateThreshVsPerfData,Prediction)
+S3method(generateThreshVsPerfData,ResampleResult)
+S3method(generateThreshVsPerfData,list)
 S3method(getFailureModelMsg,BaseWrapperModel)
 S3method(getFailureModelMsg,FailureModel)
 S3method(getFailureModelMsg,HomogeneousEnsembleModel)
@@ -517,6 +521,7 @@ export(fpr)
 export(generateFilterValuesData)
 export(generateLearningCurveData)
 export(generateROCRCurvesData)
+export(generateThreshVsPerfData)
 export(getBMRAggrPerformances)
 export(getBMRFeatSelResults)
 export(getBMRFilteredFeatures)
