--- a/NAMESPACE
+++ b/NAMESPACE
@@ -543,6 +543,7 @@ export(getNestedTuneResultsOptPathDf)
 export(getNestedTuneResultsX)
 export(getParamSet)
 export(getProbabilities)
+export(getRRPredictions)
 export(getStackedBaseLearnerPredictions)
 export(getTaskCosts)
 export(getTaskData)
